<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="2">

    <TableRow
        android:id="@+id/producerRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/producerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/producer" />

        <EditText
            android:layout_span="2"
            android:id="@+id/producerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/modelRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model" />

        <EditText
            android:layout_span="2"
            android:id="@+id/modelEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/versionRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <EditText
            android:layout_span="2"
            android:id="@+id/versionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/websiteRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/websiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />

        <EditText
            android:layout_span="2"
            android:id="@+id/websiteEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/buttonPanelRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/websiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website_button" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button" />

        <Button
            android:layout_span="2"
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />
    </TableRow>
</TableLayout>
